# YanBot-Arm

./: .gitignore  README.md  install_deps.sh
scripts/: install_deps.sh
src/arx/arx_msgs/: CMakeLists.txt
src/arx/arx_msgs/msg/: ChassisCtrl.msg  JointControl.msg  PosCmd.msg
src/arx/arx_pkg/launch/: master_and_follower.launch
src/arx/arx_pkg/scripts/: setup_can_node.py  start_can_node.py
src/arx/arx_pkg/scripts/ARX_R5_SDK/CAN/: arx_can copy.sh  arx_can.sh
src/arx/arx_r5_controller/: CMakeLists.txt  package.xml
src/arx/arx_r5_controller/include/arx_r5_controller/: KeyBoard.hpp  R5Controller.hpp  R5ControllerVr.hpp
src/arx/arx_r5_controller/lib/arx_hardware_interface/include/arx_hardware_interface/can_motor_dlc/: Mtp2Dlc.hpp
src/arx/arx_r5_controller/lib/arx_hardware_interface/include/arx_hardware_interface/typedef/: HybridJointTypeDef.hpp
src/arx/arx_r5_controller/lib/arx_r5_src/include/Eigen/src/Core/: Dot.h  Redux.h
src/arx/arx_r5_controller/lib/arx_r5_src/include/Eigen/src/Core/util/: DisableStupidWarnings.h  Memory.h
src/arx/arx_r5_controller/lib/arx_r5_src/include/Eigen/src/Eigenvalues/: HessenbergDecomposition.h
src/arx/arx_r5_controller/lib/arx_r5_src/include/Eigen/src/SparseCore/: SparseUtil.h
src/arx/arx_r5_controller/lib/arx_r5_src/include/Eigen/src/SparseLU/: SparseLU.h  SparseLU_column_dfs.h
src/arx/arx_r5_controller/src/: KeyBoard.cpp  R5Controller.cpp  R5ControllerVr.cpp
src/arx/arx_r5_msg/: CMakeLists.txt  package.xml
src/arx/arx_r5_msg/msg/: RobotCmd.msg  RobotStatus.msg
src/arx/follow/: package.xml
src/arx/follow/lib/arx_r5_src/include/Eigen/src/Core/: ArithmeticSequence.h  AssignEvaluator.h
src/arx/follow/lib/arx_r5_src/include/Eigen/src/Core/util/: Macros.h
src/arx/follow/lib/arx_r5_src/include/Eigen/src/Eigenvalues/: Tridiagonalization.h
src/arx/follow/lib/arx_r5_src/include/Eigen/src/OrderingMethods/: Amd.h
src/arx/follow/lib/arx_r5_src/include/Eigen/src/SparseCore/: SparseBlock.h  SparseMatrixBase.h
src/arx/follow/lib/arx_r5_src/include/arx_r5_src/interfaces/: InterfacesPy.hpp  InterfacesThread.hpp
src/arx/follow/src/: arx.cpp
src/arx/master/lib/arx_hardware_interface/include/arx_hardware_interface/can_motor_dlc/: MotorDlcBase.hpp  Mtp1Dlc.hpp
src/arx/master/lib/arx_hardware_interface/include/arx_hardware_interface/canbase/: CanBaseDef.hpp  SocketCan.hpp
src/arx/master/lib/arx_r5_src/include/Eigen/: SparseCore
src/arx/master/lib/arx_r5_src/include/Eigen/src/Core/: MathFunctions.h
src/arx/master/lib/arx_r5_src/include/Eigen/src/Core/arch/ZVector/: PacketMath.h
src/arx/master/lib/arx_r5_src/include/Eigen/src/Core/products/: GeneralMatrixMatrix.h
src/arx/master/lib/arx_r5_src/include/Eigen/src/Geometry/: Quaternion.h
src/arx/master/lib/arx_r5_src/include/Eigen/src/SVD/: BDCSVD.h
src/arx/master/lib/arx_r5_src/include/Eigen/src/SparseCholesky/: SimplicialCholesky.h
src/arx/master/lib/arx_r5_src/include/Eigen/src/SparseLU/: SparseLU_gemm_kernel.h
src/arx/master/src/: arx.cpp
src/arx_model/R5/: r5底座.STEP  r5末端.STEP
src/arx_model/R5/R5a/: CMakeLists.txt  package.xml
src/arx_model/R5/R5a/config/: joint_names_R5a.yaml
src/arx_model/R5/R5a/launch/: display.launch  gazebo.launch
src/arx_model/R5/R5a/urdf/: R5a.csv  R5a.urdf
src/arx_model/standard/: 齿条约束.STEP
src/arx_msgs/: CMakeLists.txt  package.xml
src/arx_msgs/msg/: PosCmd.msg
src/arx_pkg/: CMakeLists.txt  package.xml
src/arx_pkg/scripts/: setup_can_node.py  start_can_node.py
src/arx_r5_controller/: package.xml
src/arx_r5_controller/include/arx_r5_controller/: KeyBoard.hpp  R5Controller.hpp  R5ControllerVr.hpp
src/arx_r5_controller/lib/arx_hardware_interface/include/arx_hardware_interface/can_motor_dlc/: MotorDlcBase.hpp  Mtp1Dlc.hpp  Mtp2Dlc.hpp
src/arx_r5_controller/lib/arx_hardware_interface/include/arx_hardware_interface/typedef/: HybridJointTypeDef.hpp
src/arx_r5_controller/lib/arx_r5_src/include/arx_r5_src/interfaces/: InterfacesThread.hpp
src/arx_r5_controller/src/: KeyBoard.cpp  R5Controller.cpp  R5ControllerVr.cpp
src/arx_r5_msg/: CMakeLists.txt  package.xml
src/follow/: CMakeLists.txt
src/follow/launch/: follow.launch
src/follow/lib/arx_r5_src/include/arx_r5_src/interfaces/: InterfacesPy.hpp
src/follow/src/: arx.cpp
src/master/: CMakeLists.txt  package.xml
src/master/launch/: master.launch
src/master/lib/arx_hardware_interface/include/arx_hardware_interface/canbase/: CanBaseDef.hpp  SocketCan.hpp
src/master/src/: arx.cpp
src/realsense-ros/realsense2_camera/include/: constants.h
